# Calculation_of_muon_life_in_Geant4

./: .gitignore  CMakeLists.txt  README.md  simulation.cc  vis.mac
Data_and_Plots/: 650_1.txt  650_2.txt  650_3.txt  700_1.txt  700_2.txt  700_3.txt  750_1.txt  750_2.txt  750_3.txt  OriginPlots.opju  PLots_muon.py  Plots.ipynb  Plots_1.ipynb  Plots_2.ipynb  Plots_Real_data.ipynb  data_scint.xlsx  main.cc  plots.py  variables.txt
Data_and_Plots/Real_Data/: 650_196.5.data  650_200.data  650_216.7.data  700_200.data  700_216.7.data  750_196.5.data  750_200.data  750_205.data  750_216.7.data  Cherenkov-750_100.data
Geometry/: ScintillatorSetup-worldVOL.gdml  ScintillatorSetup.20240407-004921.FCBak  ScintillatorSetup.20240407-211119.FCBak  ScintillatorSetup.20240407-224537.FCBak  ScintillatorSetup.20240408-165253.FCBak  ScintillatorSetup.FCStd  Scintillator_setup.20240407-004850.FCBak  Scintillator_setup.FCStd
Geometry/ScintillatorSetup-worldVOL/: ScintillatorSetup-worldVOL-solids.xml  ScintillatorSetup-worldVOL-structure.xml  ScintillatorSetup-worldVOL.gdml  define.xml
Macros/: init_vis.mac  run.mac  vis.mac
Outputs/: output_final_t0.root
Real_Data/: Plots.ipynb
Real_Data/Data/: 700V_198.4TV.data
Report/: MuonLife_Using_TeachSpin.tex  bib.bib  main.tex  refs.bib
Report/Outputs/: main.aux  main.fdb_latexmk  main.fls  main.out  main.toc
include/: construction.hh  detector.hh  event.hh  generator.hh  stepping.hh
src/: construction.cc  detector.cc  event.cc  generator.cc  run.cc  stepping.cc
